Fixed x scrollbar bug on projects/project pages

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,9 +11,9 @@ html, body {
 #app {
   height: 100%;
   width: 100%;
-  display: flex;
-  flex-flow: column;
-  flex-wrap: none;
+  // display: flex;
+  // flex-flow: column;
+  // flex-wrap: none;
 
   #table-wrapper {
     flex-grow: 1;
